inceted my old HTML

--- a/index.html
+++ b/index.html
@@ -87,7 +87,23 @@
         <hr>
 
       </div> <!-- /container -->
+<h1>Anna Vosko</h1>
+      <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+		</header>
 
+		<nav>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="https://github.com/avosko15">My GitHub</a></li>
+				<li><a href="Resume.pdf">My Resume</a></li>
+			</uL>
+		</nav>
+
+		<section id="main">
+			<h3 style="text-align:center;">Who am I?</h3>	
+			<p style="text-align:center;">dats a good question👁👄👁 I wasnt expecting that question...</p>
+		</section>
+<img src="cutie.jpeg" alt="me" width="65%" style="vertical-align:middle;margin:50px 0px">
     </main>
 
     <footer class="container">
