i added resume and p2

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="Resume.pdf">Resume</a>
+
           </li>
           <li class="nav-item">
             <a class="nav-link"
@@ -69,7 +70,7 @@
         <div class="row">
           <div class="col-md-4">
             <h2>More About Me</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p> I enjoy long walks on the beach and pretending that the 12 hour long fireplace video's on youtube are real and actually provide warmth. </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-4">
