line 75 added fireplace near p1

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="col-md-4">
             <h2>More About Me</h2>
             <p> I enjoy long walks on the beach and pretending that the 12 hour long fireplace video's on youtube are real and actually provide warmth. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="https://youtu.be/WuHSBSLK3_A" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <h2>Hobbies</h2>
