--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           </div>
           <div class="col-md-4">
             <h2>Hobbies</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p>I enjoy showing and grooming my dogs, they are both very accomplished in their respective sports, such as countersurfing and couch hogging! </p>
+            <p><a class="btn btn-secondary" href="https://www.akc.org/sports/conformation/get-started/" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <h2>Volunteer Work</h2>
